<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".EditUserActivity">

    <!-- Name field -->
    <EditText
        android:layout_height="48dp"
        android:layout_width="match_parent"
        android:id="@+id/edit_user_name"
        android:hint="@string/hint_user_name"
        android:inputType="textCapWords"
        android:layout_marginTop="8dp"/>

    <!-- Email field -->
    <EditText
        android:layout_height="48dp"
        android:layout_width="match_parent"
        android:id="@+id/edit_user_email"
        android:hint="@string/hint_user_email"
        android:layout_marginTop="8dp"/>

    <!-- Credits field -->
    <EditText
        android:layout_height="48dp"
        android:layout_width="match_parent"
        android:id="@+id/edit_user_credits"
        android:hint="@string/hint_user_credits"
        android:inputType="number"
        android:layout_marginTop="8dp" />

</LinearLayout>