<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_weight="5"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:singleLine="true"
            android:text="@string/user_name"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:singleLine="true"
            android:text="@string/user_email"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#555555"
            android:textStyle="italic|bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/credits"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/credits"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#2B3D4D"
        android:textStyle="bold" />

    <Button
        android:id="@+id/transfer_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:fontFamily="sans-serif-medium"
        android:text="T"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#2B3D4D"
        android:textStyle="bold" />

</LinearLayout>